# ndpi_circle2roi

./: CMakeLists.txt  README.md  test200.bat  test400.bat
src/: ndpi2roi.cpp
